--- a/app/src/main/res/layout/fragement_more.xml
+++ b/app/src/main/res/layout/fragement_more.xml
@@ -43,14 +43,14 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginStart="5dp">
+                    android:layout_marginStart="5dp"
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/moreFun_jiaowu"
-                        android:layout_margin="2dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
                         android:text="@string/moreFun_jiaowu"
                         android:textColor="@color/app_black"
                         android:textSize="18sp" />
@@ -60,8 +60,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="55dp"
                         android:layout_marginBottom="10dp"
-                        android:orientation="horizontal"
-                        android:baselineAligned="false">
+                        android:baselineAligned="false"
+                        android:orientation="horizontal">
 
                         <FrameLayout
                             android:id="@+id/more_test_schedule"
@@ -166,10 +166,10 @@
                         android:id="@+id/container_jiaowu_2"
                         android:layout_width="match_parent"
                         android:layout_height="55dp"
-                        android:layout_marginBottom="10dp"
                         android:layout_gravity="center"
-                        android:orientation="horizontal"
-                        android:baselineAligned="false">
+                        android:layout_marginBottom="10dp"
+                        android:baselineAligned="false"
+                        android:orientation="horizontal">
 
                         <FrameLayout
                             android:id="@+id/more_resit_schedule"
@@ -252,14 +252,14 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_marginStart="5dp">
+                    android:layout_marginStart="5dp"
+                    android:orientation="vertical">
                     
                     <TextView
                         android:id="@+id/moreFun_biye"
-                        android:layout_margin="2dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
                         android:text="@string/moreFun_biye"
                         android:textColor="@color/app_black"
                         android:textSize="18sp" />
@@ -372,14 +372,14 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_marginStart="5dp">
+                    android:layout_marginStart="5dp"
+                    android:orientation="vertical">
                     
                     <TextView
                         android:id="@+id/moreFun_lianjie"
-                        android:layout_margin="2dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
                         android:text="@string/moreFun_lianjie"
                         android:textColor="@color/app_black"
                         android:textSize="18sp" />
@@ -505,8 +505,8 @@
                             
                             <ImageView
                                 android:id="@+id/more_url_lijiang_picture"
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
+                                android:layout_width="32dp"
+                                android:layout_height="32dp"
                                 android:layout_gravity="top|center"
                                 android:src="@drawable/m_xuexiao"
                                 tools:ignore="ContentDescription" />
@@ -577,14 +577,14 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_marginStart="5dp">
+                    android:layout_marginStart="5dp"
+                    android:orientation="vertical">
                     
                     <TextView
                         android:id="@+id/moreFun_pingjia"
-                        android:layout_margin="2dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="2dp"
                         android:text="@string/moreFun_pingjia"
                         android:textColor="@color/app_black"
                         android:textSize="18sp" />
