--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,121 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_gravity="center_vertical"
+    android:orientation="vertical"
     tools:context=".LoginActivity">
 
-        <RelativeLayout
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="15dp"
+            android:src="@drawable/logo"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            style="@style/TextStyle.Title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_margin="15dp"
+            android:text="@string/app_name"
+            android:textSize="35sp"
+            android:textStyle="bold" />
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginTop="15dp"
-                android:src="@drawable/logo" />
+    </RelativeLayout>
 
-            <TextView
-                style="@style/TextStyle.Title"
-                android:layout_width="match_parent"
-                android:layout_margin="15dp"
-                android:text="桂电课程表"
-                android:textSize="35sp"
-                android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        </RelativeLayout>
-
-        <LinearLayout
+        <com.xuexiang.xui.widget.tabbar.TabControlView
+            android:id="@+id/TabControl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:gravity="center"
+            app:tcv_defaultSelection="0"
+            app:tcv_items="@array/loginType"
+            app:tcv_selectedColor="@color/xui_btn_green_normal_color"
+            app:tcv_strokeWidth="2dp"
+            app:tcv_textSize="21sp"
+            app:tcv_unselectedTextColor="@color/xui_btn_green_normal_color" />
 
-            <com.xuexiang.xui.widget.tabbar.TabControlView
-                android:id="@+id/TabControl"
-                app:tcv_defaultSelection="0"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                app:tcv_items="@array/loginType"
-                app:tcv_textSize="21sp"
-                app:tcv_strokeWidth="2dp"
-                app:tcv_selectedColor="@color/xui_btn_green_normal_color"
-                app:tcv_unselectedTextColor="@color/xui_btn_green_normal_color"/>
+    </LinearLayout>
 
-        </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginTop="18dp">
 
-        <RelativeLayout
+        <ImageView
+            android:layout_width="39dp"
+            android:layout_height="27dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="13dp"
+            android:src="@drawable/tab_user"
+            tools:ignore="ContentDescription" />
+
+        <EditText
+            android:id="@+id/et_account"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="18dp">
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="center"
+            android:layout_marginStart="56dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginBottom="4dp"
+            android:hint="请输入学号"
+            android:inputType="text"
+            android:maxLines="1"
+            android:textColorHint="@color/xui_config_color_50_pure_black"
+            android:textSize="20sp"
+            android:importantForAutofill="no" />
 
-            <ImageView
-                android:layout_width="39dp"
-                android:layout_height="27dp"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="13dp"
-                android:src="@drawable/tab_user" />
+    </RelativeLayout>
 
-            <EditText
-                android:id="@+id/et_account"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_gravity="center"
-                android:layout_marginStart="56dp"
-                android:layout_marginEnd="28dp"
-                android:layout_marginBottom="4dp"
-                android:hint="请输入学号"
-                android:inputType="text"
-                android:maxLines="1"
-                android:textColorHint="@color/xui_config_color_50_pure_black"
-                android:textSize="20sp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp">
 
-        </RelativeLayout>
+        <ImageView
+            android:layout_width="39dp"
+            android:layout_height="27dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="13dp"
+            android:src="@drawable/password"
+            tools:ignore="ContentDescription" />
 
-        <RelativeLayout
+        <EditText
+            android:id="@+id/et_pwd"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="16dp">
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="56dp"
+            android:layout_marginEnd="28dp"
+            android:layout_marginBottom="4dp"
+            android:hint="请输入智慧校园密码"
+            android:inputType="textPassword"
+            android:maxLines="1"
+            android:textColorHint="@color/xui_config_color_50_pure_black"
+            android:textSize="20sp"
+            android:importantForAutofill="no" />
 
-            <ImageView
-                android:layout_width="39dp"
-                android:layout_height="27dp"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="13dp"
-                android:src="@drawable/password" />
+        <ImageView
+            android:id="@+id/iv_pwd_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="17dp"
+            android:src="@drawable/ic_baseline_visibility_off_24"
+            tools:ignore="ContentDescription" />
 
-            <EditText
-                android:id="@+id/et_pwd"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginStart="56dp"
-                android:layout_marginEnd="28dp"
-                android:layout_marginBottom="4dp"
-                android:hint="请输入智慧校园密码"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:textColorHint="@color/xui_config_color_50_pure_black"
-                android:textSize="20sp" />
-
-            <ImageView
-                android:id="@+id/iv_pwd_switch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginEnd="32dp"
-                android:layout_marginBottom="17dp"
-                android:src="@drawable/ic_baseline_visibility_off_24" />
-
-        </RelativeLayout>
+    </RelativeLayout>
 
 
     <RelativeLayout
@@ -130,7 +136,8 @@
             android:layout_alignParentBottom="true"
             android:layout_marginStart="8dp"
             android:layout_marginBottom="13dp"
-            android:src="@drawable/password" />
+            android:src="@drawable/password"
+            tools:ignore="ContentDescription" />
 
         <EditText
             android:id="@+id/et_pwd_VPN"
@@ -144,7 +151,8 @@
             android:inputType="textPassword"
             android:maxLines="1"
             android:textColorHint="@color/xui_config_color_50_pure_black"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:importantForAutofill="no" />
 
         <ImageView
             android:id="@+id/iv_pwd_switch_2"
@@ -154,29 +162,29 @@
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="17dp"
-            android:src="@drawable/ic_baseline_visibility_off_24" />
+            android:src="@drawable/ic_baseline_visibility_off_24"
+            tools:ignore="ContentDescription" />
 
     </RelativeLayout>
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="16dp">
+        <CheckBox
+            android:id="@+id/cb_remember_pwd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="4dp"
+            android:text="记住密码"
+            android:textColor="@color/theme_black" />
 
-            <CheckBox
-                android:id="@+id/cb_remember_pwd"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginLeft="16dp"
-                android:layout_marginBottom="4dp"
-                android:text="记住密码"
-                android:textColor="@color/theme_black" />
-
-        </RelativeLayout>
+    </RelativeLayout>
 
     <com.xuexiang.xui.widget.textview.supertextview.SuperButton
         android:id="@+id/login"
@@ -185,28 +193,60 @@
         android:layout_marginBottom="16dp"
         android:text="登录" />
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/password_help"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp">
 
-        <ImageView
-
-            android:layout_width="29dp"
-            android:layout_height="29dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/p_bangzhu"
-            android:layout_marginLeft="4dp"/>
-
-        <TextView
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="45dp"
-            android:text="密码错误的同学请输入智慧校园的密码，智慧校园网站地址：http://icampus.guet.edu.cn/ ，也即统一登录平台，,若之前没有登录过，需要先在网页上登录一次，成功后即可在APP上正常登录，若不记得密码，请联系辅导员或加群寻求帮助。"
-            android:textSize="13dp"/>
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.17" />
 
-    </RelativeLayout>
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="37dp"
+            android:layout_height="43dp"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="13dp"
+            android:src="@drawable/p_bangzhu"
+            app:layout_constraintBottom_toBottomOf="@+id/textView"
+            app:layout_constraintEnd_toStartOf="@+id/guideline5"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.5"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/first_login_help"
+            android:textSize="13sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/guideline5"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.xuexiang.xui.widget.button.ButtonView
+            android:id="@+id/develop_start"
+            style="@style/ButtonView.Blue"
+            android:layout_width="160dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="5dp"
+            android:onClick="firstLogin"
+            android:text="第一次登录智慧校园"
+            android:textColor="#FFFFFF"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </LinearLayout>
