--- a/app/src/main/res/layout/fragement_preson.xml
+++ b/app/src/main/res/layout/fragement_preson.xml
@@ -402,6 +402,47 @@
                     android:background="@color/xui_config_color_gray_9" />
 
                 <FrameLayout
+                    android:id="@+id/person_help_test"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="35dp"
+                        android:layout_margin="8dp"
+                        tools:ignore="UselessParent">
+
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_centerVertical="true"
+                            android:layout_marginStart="2.6dp"
+                            android:src="@drawable/p_test"
+                            tools:ignore="ContentDescription" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginStart="45dp"
+                            android:text="@string/person_help_test"
+                            android:textColor="@color/app_black"
+                            android:textSize="16sp" />
+
+                    </RelativeLayout>
+
+                </FrameLayout>
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="0.1dp"
+                    android:layout_marginStart="53dp"
+                    android:background="@color/xui_config_color_gray_9" />
+
+                <FrameLayout
                     android:id="@+id/person_about"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
