--- a/app/src/main/res/xml/pref_setting.xml
+++ b/app/src/main/res/xml/pref_setting.xml
@@ -11,21 +11,22 @@
         style="PreferenceCategoryStyle"
         android:key="basic_settings"
         android:title="基本设置">
+
         <SwitchPreference
             android:defaultValue="true"
             android:key="refresh_data"
-            android:summary="开启后按设定频率自动更新课表"
-            android:title="课表自动更新" />
+            android:summary="开启后将自动同步课表"
+            android:title="课表自动同步" />
 
         <ListPreference
             android:defaultValue="1"
             android:dependency="refresh_data"
-            android:dialogTitle="选择课表更新频率"
+            android:dialogTitle="选择课表同步频率"
             android:entries="@array/day_entities"
             android:entryValues="@array/day_values"
             android:key="refresh_data_frequency"
-            android:summary="选择课表更新频率"
-            android:title="课表更新频率" />
+            android:summary="选择课表同步频率"
+            android:title="课表同步频率" />
 
         <SwitchPreference
             android:defaultValue="true"
@@ -39,13 +40,11 @@
             android:summary="开启后考试安排将在日课表和周课表显示"
             android:title="课表显示考试安排" />
 
-        <!--        <CheckBoxPreference-->
-        <!--            android:dependency="optionA"-->
-        <!--            android:key="optionB"-->
-        <!--            android:summary="这里是选项测试b"-->
-        <!--            android:summaryOff="禁止B"-->
-        <!--            android:summaryOn="允许B"-->
-        <!--            android:title="选项测试B" />-->
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="app_check_update"
+            android:summary="APP每天检查一次更新"
+            android:title="自动检查更新" />
 
     </PreferenceCategory>
 
@@ -57,12 +56,6 @@
             android:summary="首页显示快捷工具栏，包含常用工具和链接"
             android:title="首页显示快捷工具栏" />
 
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="app_check_update"
-            android:summary="每天检查一次更新"
-            android:title="自动检查更新" />
-
         <ListPreference
             android:defaultValue="62"
             android:dialogTitle="选择课程项长度"
@@ -72,8 +65,11 @@
             android:summary="设置周课表单个课程的长度"
             android:title="课程项长度" />
 
-
-
+        <SwitchPreference
+            android:defaultValue="false"
+           android:key="developer_mode"
+            android:summary="为了保证稳定性，请不要开启"
+            android:title="开发者模式" />
 
     </PreferenceCategory>
 
