--- a/app/src/main/res/layout/fragment_day_class.xml
+++ b/app/src/main/res/layout/fragment_day_class.xml
@@ -48,6 +48,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginTop="8dp"
             android:layout_marginRight="5dp"
+            android:layout_marginBottom="2dp"
             app:cardCornerRadius="10dp">
 
             <LinearLayout
